--- a/with_classes/.eslintrc.json
+++ b/with_classes/.eslintrc.json
@@ -28,8 +28,8 @@
             }
         ],
         "react/self-closing-comp": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "no-param-reassign": "off"
     },
-    "parser": "babel-eslint",
-    "no-param-reassign": "off"
+    "parser": "babel-eslint"
 }
